--- a/public.html
+++ b/public.html
@@ -4,7 +4,6 @@
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -29,6 +28,10 @@
 	<li><button class="btn btn-default fully" id="btn2">ΤΟΙΧΟΣ</button></li>
 	<li><button class="btn btn-default fully" id="btn3">ΚΟΥΤΙ</button></li>
 	<li><button class="btn btn-default fully" id="btn4">ΓΡΑΜΜΗ</button></li>
+	<li><button class="btn btn-default fully" id="btn8">ΠΟΡΤΑ</button></li>
+	<li><button class="btn btn-default fully" id="btn5">ΔΙΑΓΡΑΦΗ ΑΝΤΙΚΕΙΜΕΝΟΥ</button></li>
+	<li><button class="btn btn-default fully" id="btn6">ΑΠΟΘΗΚΕΥΣΗ</button></li>
+	<li><button class="btn btn-default fully" id="btn7">ΦΟΡΤΩΣΗ ΣΧΕΔΙΟΥ</button></li>
 	
 	
 	</ul>
@@ -38,9 +41,7 @@
   </div>
    </div>
 
-<div class="footer">
-  <h2>Footer</h2>
-</div>
 <script src="func.js"></script>
+
 </body>
 </html>
