--- a/public.html
+++ b/public.html
@@ -40,7 +40,7 @@
 	<li><button class="btn btn-default fully" id="btn5">ΔΙΑΓΡΑΦΗ ΑΝΤΙΚΕΙΜΕΝΟΥ</button></li>
 	<li><button class="btn btn-default fully" id="btn6">ΑΠΟΘΗΚΕΥΣΗ</button></li>
 	<li><button class="btn btn-default fully" id="btn7">ΦΟΡΤΩΣΗ ΣΧΕΔΙΟΥ</button></li>
-	
+	<li><button class="btn btn-default fully" id="btn9">JSON</button></li>
 	
 	</ul>
   </div>
