--- a/public.html
+++ b/public.html
@@ -28,19 +28,19 @@
         <button class="btn fully image" id="medium" onclick="$('#exhibit_list').hide();createImage(this.id)">Medium</button>
 		<button class="btn fully image" id="large" onclick="$('#exhibit_list').hide();createImage(this.id)">Large</button>
 	</div>
-    <li><button class="btn btn-default fully" id="btn1" onclick="$('#exhibit_list').toggle(200);">ΕΚΘΕΜΑ</button></li>
-	<li><button class="btn btn-default fully" id="btn2">ΤΟΙΧΟΣ</button></li>
-	<li><button class="btn btn-default fully" id="btn3">ΚΟΥΤΙ</button></li>
-	<li><button class="btn btn-default fully" id="btn4">ΓΡΑΜΜΗ</button></li>
+    <li><button class="btn btn-default fully" id="btn1" onclick="$('#door_list').hide();$('#exhibit_list').toggle(200);">ΕΚΘΕΜΑ</button></li>
+	<li><button class="btn btn-default fully" id="btn2" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΤΟΙΧΟΣ</button></li>
+	<li><button class="btn btn-default fully" id="btn3" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΚΟΥΤΙ</button></li>
+	<li><button class="btn btn-default fully" id="btn4" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΓΡΑΜΜΗ</button></li>
 	<div id="door_list" class="list-unstyled sub" style="box-shadow:2px 2px 3px #ccc;display:none;background:#fff;border-radius: 0 5px 5px 0; padding:10px;position:absolute;left:200px;width:150px">
 		<button class="btn fully door" id="horizontal" onclick="$('#door_list').hide();createDoor(this.id)">Horizontal</button>
         <button class="btn fully door" id="vertical" onclick="$('#door_list').hide();createDoor(this.id)">Vertical</button>
 	</div>
-	<li><button class="btn btn-default fully" id="btn8" onclick="$('#door_list').toggle(200);">ΠΟΡΤΑ</button></li>
-	<li><button class="btn btn-default fully" id="btn5">ΔΙΑΓΡΑΦΗ ΑΝΤΙΚΕΙΜΕΝΟΥ</button></li>
-	<li><button class="btn btn-default fully" id="btn6">ΑΠΟΘΗΚΕΥΣΗ</button></li>
-	<li><button class="btn btn-default fully" id="btn7">ΦΟΡΤΩΣΗ ΣΧΕΔΙΟΥ</button></li>
-	<li><button class="btn btn-default fully" id="btn9">JSON</button></li>
+	<li><button class="btn btn-default fully" id="btn8" onclick="$('#exhibit_list').hide();$('#door_list').toggle(200);">ΠΟΡΤΑ</button></li>
+	<li><button class="btn btn-default fully" id="btn5" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΔΙΑΓΡΑΦΗ ΑΝΤΙΚΕΙΜΕΝΟΥ</button></li>
+	<li><button class="btn btn-default fully" id="btn6" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΑΠΟΘΗΚΕΥΣΗ</button></li>
+	<li><button class="btn btn-default fully" id="btn7" onclick="$('#door_list').hide();$('#exhibit_list').hide()">ΦΟΡΤΩΣΗ ΣΧΕΔΙΟΥ</button></li>
+	<li><button class="btn btn-default fully" id="btn9" onclick="$('#door_list').hide();$('#exhibit_list').hide()">JSON</button></li>
 	
 	</ul>
   </div>
